# src/main/resources/openapi/openapi.yaml
@@ -57,6 +57,36 @@ paths:
       responses:
         '200':
           description: Product created successfully
+  /api/products/get_products:
+    get:
+      tags:
+        - Product
+      summary: Retrieve a paginated list of products
+      operationId: getProducts
+      parameters:
+        - name: page
+          in: query
+          description: The page number to retrieve
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: limit
+          in: query
+          description: The number of products to retrieve per page
+          required: false
+          schema:
+            type: integer
+            default: 20
+      responses:
+        '200':
+          description: A list of products
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProductDTO'
 components:
   schemas:
     UserDTO:
